--- a/Bio.html
+++ b/Bio.html
@@ -27,7 +27,10 @@
 
 			<h2>Como trabalho</h2>
 
-			<p></p>
+			<blockquote>
+				<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
+				<cite>-- José Souza, Fiat</cite>
+			</blockquote>
 
 			<p>
 			Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. <strong> Não trabalho com escopo fechado:</strong> o cliente é que decide quando o produto está pronto.<br><br>
@@ -36,6 +39,11 @@
 
 
 			<h2>Experiência</h2>
+			<blockquote>
+				<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
+				<cite>-- Manoel Santos, Petrobrás</cite>
+			</blockquote>
+
 			<p>
 			Já desenvolvi projetos para grandes empresas como <a href="http://bmw.com">BMW,</a>  <a href="http://bmw.com">UOL</a> e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.<br><br>
 			Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.
