--- a/Bio.html
+++ b/Bio.html
@@ -54,11 +54,16 @@
 		<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog.</a></p>
 		<img src="eu.jpg" alt="Foto de João da Silva">
 		<nav>
+			<h1>João da Silva</h1>
 			<ul>
 				<li><a href="">Home</a></li>
 				<li><a href="">Portfolio</a></li>
 			</ul>
 		</nav>
+
+		<footer>
+			&copy; Thiago Lemos 2019.
+		</footer>
 
 
 	</body>
