--- a/Bio.html
+++ b/Bio.html
@@ -13,58 +13,66 @@
 		<!-- que é a única necessária para os cabeçalhos            -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 
-
 	</head>
 	<body>
 		<main>
-			<h1>Sobre mim</h1>
+			<article>
+				<h1>Sobre mim</h1>
 
-			<p>
-			Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <i>qualidade, durabilidade</i> e que <i>:agregam valor</i> para meus clientes.<br><br>
-			Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.
-			</p>
+				<p>
+				Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <i>qualidade, durabilidade</i> e que <i>:agregam valor</i> para meus clientes.<br><br>
+				Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.
+				</p>
+			</article>
 
+			<article>
+				<h2>Como trabalho</h2>
 
-			<h2>Como trabalho</h2>
+				<blockquote>
+					<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
+					<cite>-- José Souza, Fiat</cite>
+				</blockquote>
 
-			<blockquote>
-				<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
-				<cite>-- José Souza, Fiat</cite>
-			</blockquote>
+				<p>
+				Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. <strong> Não trabalho com escopo fechado:</strong> o cliente é que decide quando o produto está pronto.<br><br>
+				Também não trabalho com prazos fechados: <strong>qualidade é importante demais para ser sacrificada.</strong>
+				</p>
+			</article>
 
-			<p>
-			Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. <strong> Não trabalho com escopo fechado:</strong> o cliente é que decide quando o produto está pronto.<br><br>
-			Também não trabalho com prazos fechados: <strong>qualidade é importante demais para ser sacrificada.</strong>
-			</p>
+			<article>
+				<h2>Experiência</h2>
+				<blockquote>
+					<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
+					<cite>-- Manoel Santos, Petrobrás</cite>
+				</blockquote>
 
+				<p>
+				Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com">BMW,</a>  <a href="http://www.uol.com">UOL</a> e <a href="http://www.ibm.com">IBM</a>. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.<br><br>
+				Também já fui contratado para transformar grandes portais, como <a href="http://www.terra.com.br">Terra</a> e <a href="http://www.g1.com.br">G1</a>, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.
+				</p>
+			</article>
 
-			<h2>Experiência</h2>
-			<blockquote>
-				<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
-				<cite>-- Manoel Santos, Petrobrás</cite>
-			</blockquote>
+			<article></article>
+				<h2>Comunidade</h2>
+				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog.</a></p>
+			</article>
 
-			<p>
-			Já desenvolvi projetos para grandes empresas como <a href="http://bmw.com">BMW,</a>  <a href="http://bmw.com">UOL</a> e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.<br><br>
-			Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.
-			</p>
 		</main>
-
-		<h2>Comunidade</h2>
-		<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog.</a></p>
 		<img src="eu.jpg" alt="Foto de João da Silva">
-		<nav>
+		<aside>
 			<h1>João da Silva</h1>
-			<ul>
-				<li><a href="">Home</a></li>
-				<li><a href="">Portfolio</a></li>
-			</ul>
-		</nav>
-
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="bio.html">Sobre mim</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+			</nav>
+		</aside>
 		<footer>
 			&copy; Thiago Lemos 2019.
 		</footer>
-
-
 	</body>
 </html>
