--- a/Bio.html
+++ b/Bio.html
@@ -48,7 +48,7 @@
 
 				<p>
 				Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com">BMW,</a>  <a href="http://www.uol.com">UOL</a> e <a href="http://www.ibm.com">IBM</a>. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.<br><br>
-				Também já fui contratado para transformar grandes portais, como <a href="http://www.terra.com.br">Terra</a> e <a href="http://www.g1.com.br">G1</a>, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.
+				Também já fui contratado para transformar grandes portais, como <a href="http://www.terra.com.br">Terra</a> e <a href="http://www.g1.com.br">G1</a>, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitáve
 				</p>
 			</article>
 
