--- a/bio.html
+++ b/bio.html
@@ -17,10 +17,10 @@
 	<body>
 		<main>
 			<article>
-				<h1>Sobre nós</h1>
+				<h1>Sobre mim</h1>
 
 				<p>
-				Moro em Minas Gerais mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <i>qualidade, durabilidade</i> e que <i>:agregam valor</i> para meus clientes.<br><br>
+				Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <i>qualidade, durabilidade</i> e que <i>:agregam valor</i> para meus clientes.<br><br>
 				Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.
 				</p>
 			</article>
