--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,8 @@
 		<title>Biografia - João da Silva</title>
 		<meta charset="utf-8">
 		<link rel="icon" href="favicon.png">
-		<link rel="stylesheet" type="text/css" href="site.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/site.css">
 
 		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
