--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Biografia - João da Silva</title>
 		<meta charset="utf-8">
-		<link rel="icon" href="favicon.png">
+		<link rel="icon" href="imagens/favicon.png">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/site.css">
 
@@ -18,7 +18,7 @@
 	<body>
 		<main>
 			
-			<h1>Sobre mim</h1>
+			<h1 class="titulo">Sobre mim</h1>
 			<div>
 				<article>
 					<p>
@@ -30,7 +30,7 @@
 				<article>
 					<h2>Como trabalho</h2>
 
-					<blockquote>
+					<blockquote class="citacao">
 						<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 						<cite>-- José Souza, Fiat</cite>
 					</blockquote>
@@ -43,7 +43,7 @@
 
 				<article>
 					<h2>Experiência</h2>
-					<blockquote>
+					<blockquote class="citacao">
 						<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 						<cite>-- Manoel Santos, Petrobrás</cite>
 					</blockquote>
@@ -59,8 +59,8 @@
 				</article>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva">
-		<aside>
+		<img src="imagens/eu.jpg" alt="Foto de João da Silva">
+		<aside class="navegacao-site">
 			<div>
 				<h1>João da Silva</h1>
 				<nav>
@@ -72,9 +72,14 @@
 						<li><a href="contato.html">Contato</a></li>
 					</ul>
 				</nav>
+				<ul class="icones-sociais">
+					<li><a href="https://github.com/lemoosth"><img src="imagens/github.png" alt="Github"></a></li>
+					<li><a href="https://twitter.com/Lemoos_th"><img src="imagens/twitter.png" alt="Twitter"></a></li>
+					<li><a href="https://www.linkedin.com/in/thiago-lemos-0a4040100/"><img src="imagens/linkedin.png" alt="Linkedin"></a></li>
+				</ul>
 			</div>
 		</aside>
-		<footer>
+		<footer id="rodape-pagina">
 			&copy; Thiago Lemos 2019.
 		</footer>
 	</body>
