--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
 		<main>
 			
 			<h1 class="titulo">Sobre mim</h1>
-			<div>
+			<div class="container">
 				<article>
 					<p>
 					Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <i>qualidade, durabilidade</i> e que <i>:agregam valor</i> para meus clientes.<br><br>
@@ -30,7 +30,7 @@
 				<article>
 					<h2>Como trabalho</h2>
 
-					<blockquote class="citacao">
+					<blockquote class="fiat citacao">
 						<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 						<cite>-- José Souza, Fiat</cite>
 					</blockquote>
@@ -43,7 +43,7 @@
 
 				<article>
 					<h2>Experiência</h2>
-					<blockquote class="citacao">
+					<blockquote class="petrobras citacao">
 						<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 						<cite>-- Manoel Santos, Petrobrás</cite>
 					</blockquote>
@@ -73,9 +73,9 @@
 					</ul>
 				</nav>
 				<ul class="icones-sociais">
-					<li><a href="https://github.com/lemoosth"><img src="imagens/github.png" alt="Github"></a></li>
-					<li><a href="https://twitter.com/Lemoos_th"><img src="imagens/twitter.png" alt="Twitter"></a></li>
-					<li><a href="https://www.linkedin.com/in/thiago-lemos-0a4040100/"><img src="imagens/linkedin.png" alt="Linkedin"></a></li>
+					<li class="github"><a href="https://github.com/lemoosth">Github</a></li>
+					<li class="twitter"><a href="https://twitter.com/Lemoos_th">Twitter</a></li>
+					<li class="linkedin"><a href="https://www.linkedin.com/in/thiago-lemos-0a4040100/"> LinkedIn</a></li>
 				</ul>
 			</div>
 		</aside>
