Projeto final parte 1 do curso

--- a/bio.html
+++ b/bio.html
@@ -59,7 +59,7 @@
 				</article>
 			</div>
 		</main>
-		<img src="imagens/eu.jpg" alt="Foto de João da Silva">
+		<img class="minha-foto" src="imagens/eu.jpg" alt="Foto de João da Silva">
 		<aside class="navegacao-site">
 			<div>
 				<h1>João da Silva</h1>
